--- a/index.html
+++ b/index.html
@@ -2,14 +2,7 @@
 layout: default
 ---
 
-<p>
-  Welcome to my personal website. On the top right, you can find links that will give you
-  more information about me, as well as an archive of my past blog posts.
-</p>
-
-<p>
-  Below is my most recent blog post, which is about {{ site.posts.last.about }}.
-</p>
+Welcome to the web home of tomladendorf.
 
 <hr class="mini" />
 
