--- a/blog.html
+++ b/blog.html
@@ -4,7 +4,7 @@ title: Tom Ladendorf
 ---
 
 <div id="home">
-  <h2 class="postindex">Blog Posts</h1>
+  <h2 class="postindex">post index</h1>
   <ul class="posts">
     {% for post in site.posts %}
     <li><span>{{ post.date | date: "%B %d, %Y" }} -></span> <a href="{{ post.url }}">{{ post.title }}</a></li>
